--- a/firstDemo_nodejs/package.json
+++ b/firstDemo_nodejs/package.json
@@ -7,5 +7,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "SPM",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "js-sha256": "^0.9.0"
+  }
 }
